test/conformance/chainsaw/globalcontext/runtime-custom-resource/crd.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: widgets.runtime.globalcontext.kyverno.io
spec:
  group: runtime.globalcontext.kyverno.io
  scope: Namespaced
  names:
    plural: widgets
    singular: widget
    kind: Widget
  versions:
  - name: v1alpha1
    served: true
    storage: true
    schema:
      openAPIV3Schema:
        type: object
        properties:
          spec:
            type: object
            required: [value]
            properties:
              value:
                type: string
