test/conformance/chainsaw/globalcontext/runtime-custom-resource/rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: globalcontext-runtime-widgets
  labels:
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
    rbac.kyverno.io/aggregate-to-background-controller: "true"
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
    rbac.kyverno.io/aggregate-to-cleanup-controller: "true"
rules:
- apiGroups: [runtime.globalcontext.kyverno.io]
  resources: [widgets]
  verbs: [get, list, watch]
